refactor update commponent product

--- a/frontend/component-product/main/product/product.html
+++ b/frontend/component-product/main/product/product.html
@@ -32,7 +32,7 @@
         </div>
 
        <!-- TEST -->
-   <div class="container">
+   <div class="container product">
 
                 <div class="main-box-product">
                         <div class="box-img">
