refactor commponent inesta to main

--- a/frontend/component-product/main/inestagram/insta.html
+++ b/frontend/component-product/main/inestagram/insta.html
@@ -16,14 +16,19 @@
         Scelerisque duis ultrices sollicitudin aliquam sem.
          Scelerisque duis ultrices sollicitudin 
     </div>
-    <div class="instagram-box-img">
+    <div class="container">
+
+     <div class="instagram-box-img">
         <img src="/frontend/images/image.png" alt="">
-        <img src="/frontend/images/image (1).png" alt="">
         <img src="/frontend/images/image (2).png" alt="">
-        <img src="/frontend/images/image (3).png" alt="">
         <img src="/frontend/images/image (4).png" alt="">
-        <img src="/frontend/images/image (5).png" alt="">
     </div>
+          
+
+        </div>
+
+    </div>
+   
    
 
 </main>
