--- a/frontend/index.html
+++ b/frontend/index.html
@@ -19,6 +19,7 @@
   <div id="footer"></div>
 
   <script src="/frontend/component-product/layout.js"></script>
+  <script src="/frontend/component-product/header/header.js"></script>
 
 </body>
 </html>
