update menue hambergr in header

--- a/frontend/component-product/header/header.html
+++ b/frontend/component-product/header/header.html
@@ -85,21 +85,7 @@
 
 </header>
 
-
-<script>
-const sidbar=document.querySelector(".side-bar ul")
-const showmenue=document.querySelector(".showmenue")
-
-function hidSidbar(){
-          sidbar.style.display="none"
-}
-
- showmenue.addEventListener("click",()=>{
-    sidbar.style.display="flex"
-    console.log("niyayesj");
-    
- })
-</script>
+<script src="/frontend/component-product/header/header.js"></script>
 
 
 </body>
